--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -23,6 +23,7 @@
   --accent: oklch(0.9705 0.0142 254.6042);
   --accent-foreground: oklch(0.6231 0.1880 259.8145);
   --destructive: oklch(0.6368 0.2078 25.3313);
+  --success: oklch(0.6959 0.1491 162.4796);
   --destructive-foreground: oklch(1.0000 0 0);
   --border: oklch(0.9276 0.0058 264.5313);
   --input: oklch(1.0000 0 0);
@@ -78,6 +79,7 @@
   --accent: oklch(0.6231 0.1880 259.8145);
   --accent-foreground: oklch(1.0000 0 0);
   --destructive: oklch(0.6368 0.2078 25.3313);
+    --success: oklch(0.6959 0.1491 162.4796);
   --destructive-foreground: oklch(1.0000 0 0);
   --border: oklch(0.3729 0.0306 259.7328);
   --input: oklch(0.3729 0.0306 259.7328);
@@ -131,6 +133,7 @@
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-destructive: var(--destructive);
+  --color-success: var(--success);
   --color-destructive-foreground: var(--destructive-foreground);
   --color-border: var(--border);
   --color-input: var(--input);
